app-test/testdata/typesystem/neg/pattern-matching-deconstructor-arg-type/check/patmat.check
testdata/typesystem/neg/pattern-matching-deconstructor-arg-type/src/patmat.cal:8:26: error: Incompatible types; expected bool but was real(32).
                    T(1, 2.5) : 1 end // error
                         ^^^